fixed form-group alignment

--- a/register.css
+++ b/register.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background: linear-gradient(to bottom, #bca676, #baaa8f);
+    background-image: url("images/reg-login-pic.jpg");
+    background-size: cover;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,6 +28,7 @@ body {
   .form-group {
     margin-bottom: 1rem;
     text-align: left;
+    margin-right: 1rem;
   }
   
   .form-group label {
